Fix budget info on smaller screens
git-tfs-id: [https://bartosz-wozniak.visualstudio.com/DefaultCollection]$/StockExchange/StockExchange_Dev;C608

--- a/StockExchange.Web/Content/css/main.less
+++ b/StockExchange.Web/Content/css/main.less
@@ -197,3 +197,7 @@ footer {
 .btn i {
     margin-right: 5px;
 }
+
+.budget-infobox .info-box-number {
+    font-size: 16px;
+}
